...
                        Image(systemName: TabItem.collections.icon)
                            .font(.system(size: 22, weight: .bold, design: .rounded))
                        Text(TabItem.collections.title)
                            .font(.headingSmall)
                    }
                    .accessibilityLabel(R.string.localizable.accessibilityCollectionsTab())
                    .accessibilityIdentifier("CollectionsTabButton")
                }
                .tag(TabItem.collections)

                NavigationStack(path: $appRouter.settingsPath) {
                    SettingsView()
                        .navigationDestination(for: AppDestination.self) { destination in
...
