...

            HStack {
                TextField(R.string.localizable.storyFormCharacterPlaceholder(), text: $favoriteCharacter)
                    .formFieldStyle()
                    .submitLabel(.next)
                    .autocorrectionDisabled()
                    .accessibilityIdentifier("favoriteCharacterTextField")

                if !favoriteCharacter.isEmpty {
                    Button(action: {
                        favoriteCharacter = ""
                    }) {
                        Image(systemName: "xmark.circle.fill")
...
